--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     .button {
       display: inline-block;
-      padding: 10px 20px;
+      padding: 10% 20%;
       background-color: #007bff;
       color: #fff;
       text-decoration: none;
