--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     .footer {
       background-color: #333;
       color: #fff;
-      padding: 20px;
+      padding: 20%;
       display: flex;
       justify-content: space-between;
       align-items: center;
