--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     .button {
       display: inline-block;
-      padding: 10% 20%;
+      padding: 10px 20px;
       background-color: #007bff;
       color: #fff;
       text-decoration: none;
@@ -66,6 +66,7 @@
       transition: background-color 0.3s ease;
       cursor: pointer;
       border: none;
+      margin-button : 10px;
     }
 
     .button:hover {
@@ -100,10 +101,11 @@
     .footer {
       background-color: #333;
       color: #fff;
-      padding: 20%;
+      padding: 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      margin_top : 20px;
     }
 
     .footer-column {
