--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       border: 1px solid #ccc;
       padding: 20px;
       border-radius: 5px;
-      margin-top: 20px;
+      margin: 20px;
       display: none;
       /* Sembunyikan struk awalnya */
     }
